<resources>
    <string name="app_name">BakingApp.Udacity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_recipes">No Recipes Available!</string>
    <string name="first_step">First Step</string>
    <string name="last_step">Last Step</string>
    <string name="nextButton">Next Step</string>
    <string name="previousButton">Previous Step</string>

    <string name="title_step_list">Steps</string>
    <string name="title_step_detail">Step Detail</string>
    <string name="title_recipe_step_list">Recipe Steps</string>
    <string name="title_recipe_step_detail">Recipe Step Detail</string>
    <string name="title_ingredients">Ingredients</string>



</resources>
