<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ImageView
        android:id="@+id/recipe_ImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:background="@color/background"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/recipe_TextView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="@dimen/textSize"
        android:textStyle="bold"
        android:textColor="@color/textColor"
        android:gravity="center"/>


</android.support.v7.widget.CardView>